Ranger plugin: addressed review comments